Overflow correct 1

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -8,13 +8,15 @@ html , body{
   margin: 0;
   padding: 0;
   font-family: 'Didact Gothic', sans-serif;
+  overflow-x: none;
 }
 
 nav{
+    background-color: var(--dark-color);
     left: 0;
     right: 0;
     top: 0;
-    z-index: 1000;
+    z-index: 1;
     width: 100%;
 }
 
